<resources>
    <string name="app_name">MedToGo</string>
    <string name="email">Enter your email</string>
    <string name="pwd">Enter your password</string>
    <string name="confpwd">Confirm password</string>
    <string name="register">Register</string>
    <string name="alreadyregisterd">Already Registered? Sign in here</string>
    <string name="Login">Login</string>
    <string name="GrabmedLogin">Grab Medicine Login</string>
    <string name="noaccount">Don\'t have an account? Register here</string>
    <string name="GrabmedRegis">Grab Medicine Registration</string>
    <string name="title_activity_main">GrabMed</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="name">Enter your name</string>
    <string name="phone">Enter your phone number</string>
    <string name="title_activity_maps">Map</string>
</resources>
