<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserAuth.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150sp"
            android:src="@drawable/logo"
            android:scaleType="centerInside"/>
        <TextView
            android:layout_marginTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Maiiniom kahit walang tubig!"
            android:textStyle="italic"
            android:textAlignment="center"/>

        <TextView
            android:layout_margin="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/GrabmedLogin"
            android:textAlignment="center"
            android:textSize="30sp"/>

        <EditText
            android:layout_margin="20sp"
            android:id="@+id/txtemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>
        <EditText
            android:layout_margin="20sp"
            android:id="@+id/txtpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pwd"
            android:inputType="textPassword"/>
        <Button
            android:id="@+id/loginbtn"
            android:layout_margin="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Login"
            android:textSize="15sp"
            android:textColor="@color/colorWhite"
            android:background="@color/colorAppPrimary"/>
        <ProgressBar
            android:layout_margin="20sp"
            android:id="@+id/progressbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>
        <TextView
            android:onClick="gotoRegister"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/noaccount"
            android:textSize="18sp"/>

    </LinearLayout>
</RelativeLayout>