<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserAuth.SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:src="@drawable/logo"
            android:scaleType="centerInside"/>
        <TextView
            android:layout_marginTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Maiiniom kahit walang tubig!"
            android:textStyle="italic"
            android:textAlignment="center"/>
        <TextView
            android:layout_margin="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Register User"
            android:textAlignment="center"
            android:textSize="30sp"/>
        <EditText
            android:id="@+id/txtname"
            android:layout_marginRight="20sp"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="15sp"
            android:layout_marginEnd="20sp"
            android:layout_marginStart="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textPersonName" />
        <EditText
            android:layout_marginRight="20sp"
            android:layout_marginLeft="20sp"
            android:layout_marginBottom="15sp"
            android:layout_marginEnd="20sp"
            android:layout_marginStart="20sp"
            android:id="@+id/txtemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>
        <EditText
            android:layout_marginRight="20sp"
            android:layout_marginLeft="20sp"
            android:layout_marginBottom="15sp"
            android:layout_marginEnd="20sp"
            android:layout_marginStart="20sp"
            android:id="@+id/txtphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:inputType="phone"/>
        <EditText
            android:layout_marginRight="20sp"
            android:layout_marginLeft="20sp"
            android:layout_marginBottom="15sp"
            android:layout_marginEnd="20sp"
            android:layout_marginStart="20sp"
            android:id="@+id/txtpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pwd"
            android:inputType="textPassword"/>
        <EditText
            android:layout_marginRight="20sp"
            android:layout_marginLeft="20sp"
            android:layout_marginBottom="15sp"
            android:layout_marginEnd="20sp"
            android:layout_marginStart="20sp"
            android:id="@+id/txtconfpwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confpwd"
            android:inputType="textPassword"/>
        <Button
            android:id="@+id/registerAcc"
            android:layout_margin="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="15sp"
            android:textColor="@color/colorWhite"
            android:background="@color/colorAppPrimary"/>

        <ProgressBar
            android:layout_margin="20sp"
            android:id="@+id/progressbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <TextView
            android:onClick="gotoSignin"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alreadyregisterd"
            android:textSize="18sp"/>

    </LinearLayout>
</RelativeLayout>